# internal/httpclient/api/openapi.yaml
@@ -1475,6 +1475,29 @@ paths:
       summary: OAuth 2.0 Authorize Endpoint
       tags:
       - oAuth2
+  /oauth2/device/auth:
+    post:
+      description: "This endpoint is not documented here because you should never\
+        \ use your own implementation to perform OAuth2 flows.\nOAuth2 is a very popular\
+        \ protocol and a library for your programming language will exists.\n\nTo\
+        \ learn more about this flow please refer to the specification: https://tools.ietf.org/html/rfc8628"
+      operationId: performOAuth2DeviceFlow
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/deviceAuthorization'
+          description: deviceAuthorization
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorOAuth2'
+          description: errorOAuth2
+      summary: The OAuth 2.0 Device Authorize Endpoint
+      tags:
+      - v0alpha2
   /oauth2/register:
     post:
       description: |-
@@ -2085,6 +2108,51 @@ components:
             type: string
           type: array
       title: Verifiable Credentials Metadata (Draft 00)
+      type: object
+    deviceAuthorization:
+      description: '# Ory''s OAuth 2.0 Device Authorization API'
+      example:
+        user_code: AAAAAA
+        device_code: ory_dc_smldfksmdfkl.mslkmlkmlk
+        interval: 5
+        verification_uri_complete: https://auth.ory.sh/tv?user_code=AAAAAA
+        verification_uri: https://auth.ory.sh/tv
+        expires_in: 16830
+      properties:
+        device_code:
+          description: The device verification code.
+          example: ory_dc_smldfksmdfkl.mslkmlkmlk
+          type: string
+        expires_in:
+          description: The lifetime in seconds of the "device_code" and "user_code".
+          example: 16830
+          format: int64
+          type: integer
+        interval:
+          description: "The minimum amount of time in seconds that the client\nSHOULD\
+            \ wait between polling requests to the token endpoint.  If no\nvalue is\
+            \ provided, clients MUST use 5 as the default."
+          example: 5
+          format: int64
+          type: integer
+        user_code:
+          description: The end-user verification code.
+          example: AAAAAA
+          type: string
+        verification_uri:
+          description: |-
+            The end-user verification URI on the authorization
+            server.  The URI should be short and easy to remember as end users
+            will be asked to manually type it into their user agent.
+          example: https://auth.ory.sh/tv
+          type: string
+        verification_uri_complete:
+          description: "A verification URI that includes the \"user_code\" (or\nother\
+            \ information with the same function as the \"user_code\"),\nwhich is\
+            \ designed for non-textual transmission."
+          example: https://auth.ory.sh/tv?user_code=AAAAAA
+          type: string
+      title: OAuth2 Device Flow
       type: object
     errorOAuth2:
       description: Error
